--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "tedious": "^18.6.1"
   }
 }
