--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "sequelize": "^6.37.5",
     "tedious": "^18.6.1"
